<resources>
    <string name="app_name">Popular Movies</string>
    <string name="failed_load">Failed to Load Data! Please check your connection and try again!</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by">Sort By</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="vote_average">Vote Average</string>
    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="error_choice">Movie details not found. Please try again!</string>
</resources>
