<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.popularmovies.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="2dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/release_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/vote_average"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/plot_synopsis"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_movie_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/error_choice"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
